[package]
name = "gym"
version = "2.0.0-beta"
authors = ["Roberto <rob.ariosa@hotmail.com>"]
edition = "2018"

description = "Open AI environments bindings for Rust"
repository = "https://github.com/MrRobb/gym-rs"
documentation = "https://docs.rs/gym"
readme = "README.md"
keywords = ["openai", "gym", "environments", "reinforcement", "learning"]
categories = ["api-bindings"]
license = "MIT/Apache-2.0"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
rand = "0.7.2"
cpython = "0.3.0"
ndarray = "0.13.0"
num = "0.2.0"