[package]
name = "gym"
version = "2.2.1"
authors = ["Roberto <rob.ariosa@hotmail.com>"]
edition = "2018"

description = "Open AI environments bindings for Rust"
repository = "https://github.com/MrRobb/gym-rs"
documentation = "https://docs.rs/gym"
readme = "README.md"
keywords = ["openai", "gym", "environments", "reinforcement", "learning"]
categories = ["api-bindings"]
license = "MIT/Apache-2.0"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
rand = "0.7.3"
cpython = "0.5.0"
ndarray = "0.15.0"
failure = "0.1.6"