[package]
name = "gym"
version = "2.2.1"
authors = ["Roberto <rob.ariosa@hotmail.com>"]
edition = "2021"

description = "Open AI environments bindings for Rust"
repository = "https://github.com/MrRobb/gym-rs"
documentation = "https://docs.rs/gym"
readme = "README.md"
keywords = ["openai", "gym", "environments", "reinforcement", "learning"]
categories = ["api-bindings"]
license = "MIT/Apache-2.0"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
rand = "0.8"
cpython = "0.7"
ndarray = "0.15"
thiserror = "1.0"
